unpackaged/main/default/objects/AccountAPI__c/AccountAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AccountAPI</label>
</CustomObject>