unpackaged/main/default/objects/AccountAPI__c/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <label>Accept</label>
    <length>100</length>
    <type>Text</type>
</CustomField>