unpackaged/main/default/objects/AccountAPI__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>