unpackaged/main/default/objects/AccountAPI__c/fields/Client_secret__c.field-meta.xml
<CustomField>
    <fullName>Client_secret__c</fullName>
    <label>Client_secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>