unpackaged/main/default/objects/AccountAPI__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content-Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>