unpackaged/main/default/objects/AccountAPI__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>