unpackaged/main/default/objects/AccountAPI__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>5</length>
    <type>Text</type>
</CustomField>